--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,6 +163,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    border-radius: 10px;
 }
 
 .search-engine-optimization img {
