--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
     border-radius: 10px;
+    box-shadow: 8px 3px 3px #020449;
 }
 
 .benefit-lead {
