--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
     border-radius: 10px;
+    box-shadow: 8px 3px 3px #020449;
 }
 
 .social-media-marketing {
